// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketField /> should render coming soon for unsupported fields 1`] = `
<div>
  Coming soon
</div>
`;

exports[`<TicketField /> should render coming soon for unsupported fields 2`] = `
<div>
  Coming soon
</div>
`;

exports[`<TicketField /> should render the appropriate field 1`] = `
<label
  class="labelWrapper"
>
  <span
    class="label"
  >
    Input field
    :
  </span>
  <input
    autocomplete="off"
    class="baseStyles stealth"
    id="ticket-whateva-custom-field-value-input-123"
    name="Input field"
    placeholder="Some placeholder"
    type="text"
    value="some value"
  />
</label>
`;

exports[`<TicketField /> should render the appropriate field 2`] = `
<label
  class="labelWrapper"
>
  <span
    class="label"
  >
    Dropdown field
    :
  </span>
  <input
    autocomplete="off"
    class="baseStyles stealth"
    id="ticket-whateva-custom-field-value-input-2"
    name="Dropdown field"
    placeholder="+Add"
    type="text"
    value="some value"
  />
</label>
`;

exports[`<TicketField /> should render the appropriate field 3`] = `
<label
  class="labelWrapper"
>
  <span
    class="label"
  >
    Yes/No field
    :
  </span>
  <input
    autocomplete="off"
    class="baseStyles stealth"
    id="ticket-whateva-custom-field-value-input-2"
    name="Yes/No field"
    placeholder="+Add"
    type="text"
    value="Yes"
  />
</label>
`;

exports[`<TicketField /> should render the appropriate field 4`] = `
<label
  class="labelWrapper"
>
  <span
    class="label"
  >
    Number field
    :
  </span>
  <input
    autocomplete="off"
    class="baseStyles stealth"
    id="ticket-whateva-custom-field-value-number-input-123"
    max="10"
    min="1"
    name="Number field"
    placeholder="+Add"
    type="number"
    value="123"
  />
</label>
`;
